# actmat

./: .gitignore  CLAUDE.md  README.md  README_v2.md  environment.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/todos/: add-issue--artifact.md
analysis-results/ViT-B-16/: error_terms.csv
notebooks/: analysis-v2.ipynb  analysis.ipynb
results-analysis-drift/ViT-B-16/: error_terms.csv
results-tracked/: results-anc.jsonl  results-ilharco.jsonl  results-latency.jsonl  results-lora.jsonl  results-olmo.jsonl  results-regmean.jsonl  results-ta.jsonl  results.jsonl
results/ViT-B-16-actmat/: metrics.json
results/ViT-B-16-fisher/: metrics.json
results/ViT-B-16-isoc/: lora_metrics.json
results/ViT-B-16-regmean-w/: metrics.json
scripts/: analysis.ipynb  covariance.py  decorrelation.py  decorrelation_offline.py  disentanglement.py  finetune.sh  gmag.py  gpu.md  interference.py  lang_eval.sh  lang_eval_covs.sh  lang_eval_hpo.sh  lang_eval_hpo_2.sh  lang_eval_merge_time.sh  lang_train.sh  lang_train_array.sh  make_bar_chart.py  setup.sh  setup_uv.sh  train.sh  vision_covs.sh  vision_eval.sh  vision_eval_covs.sh  vision_eval_covs_2.sh  vision_eval_hpo.sh  vision_eval_hpo_2.sh  vision_eval_regmean.sh  vision_train.sh  vision_train_array.sh
scripts-old/: lang_eval.sh  setup_uv.sh  vision_eval_covs.sh
scripts/language/: finetune.py  (+12 more)
src/: args.py  covariance.py  eval.py  eval_single_task.py  eval_task_addition.py  finetune.py  linearize.py  merging.py  mha.py  mhas.py  results_db.py  task_vectors.py  utils.py
tests/: test_e2e.sh
(+171 files in other folders)
