[project]
name = "eigcov"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.9.0",
    "numpy>=2.2.6",
    "open-clip-torch>=3.3.0",
    "peft>=0.18.1",
    "pillow>=12.2.0",
    "promptsource",
    "protobuf>=7.34.1",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]

[tool.uv.sources]
promptsource = { git = "https://github.com/bigscience-workshop/promptsource.git" }
